@@ -1,3 +1,5 @@
+* OPENDNSSEC-508: <RolloverNotification> tag not functioning.
+
 OpenDNSSEC 2.1.1 - 2017-04-28
 
 * OPENDNSSEC-889: MySQL migration script didn't work for all database and
